--- a/python/Import practice/import web csv.ipynb
+++ b/python/Import practice/import web csv.ipynb
@@ -202,11 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_res"
+    "df_residual_sugar = df['residual sugar']\n",
+    "\n",
+    "max(df_residual_sugar)\n"
    ]
   }
  ],
